# aggr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
libraries/ylems/include/ylems/: categories.h
libraries/ylems/include/ylems/categories/: filter.h  iota.h  transform.h  transform_or.h  zip.h
libraries/ylems/include/ylems/rules/: abstract.h  algebra.h
main/include/agge/: clipper.h  color.h  dash.h  math.h  path.h  precise_delta.h  renderer.h  scanline.h  tools.h  types.h  vector_rasterizer.h
main/include/agge.async/: worker.h
main/include/agge.text/: annotated_string.h  font.h  glyph.h  layout.h  layout_builder.h  layout_primitives.h  limit.h  range_adapter.h  text_engine.h  types.h
main/include/agge/math/: math.h  minmax.h
main/include/agge/parallel/: hybrid_event.h  parallel.h  thread.h
main/include/agge/primitives/: _pipeline.h  curves.h  dash.h  figures.h  path.h  pipeline.h  polyline.h  stroke.h  stroke_features.h
main/include/agge/primitives/algebra/: algebra.h  close.h  closed.h  glued.h  join.h  rules.h
main/include/agge/rendering/: bitmap.h  blenders.h  blenders_generic.h  blenders_simd.h  clipper.h  platform.h  rasterizer.h  renderer.h  renderer_parallel.h  scanline.h  vector_rasterizer.h
main/include/agge/rendering/platform/: bitmap.h
main/include/agge/types/: Point.h  Rect.h  Scalars.h
main/include/agge/utils/: bezier.h  math.h  memory.h  pod_vector.h  precise_delta.h  static_any.h  tools.h  vertex_sequence.h
main/include/palgebra/: algebra.h  decorators.h  elements.h
main/include/palgebra/algebra/: adapted.h  algebra.h  closed.h  concat.h  decorated.h  elements.h  join.h  reversed.h  rules.h  start.h
main/include/palgebra/algorithms/: segments.h
main/include/palgebra/decorators/: caps.h  connect.h  dash.h  extrudes.h  joins.h  shifted.h
main/include/palgebra/elements/: arc.h  bezier.h  curve.h  segment.h  vertex.h
main/include/palgebra/mediators/: Path.h  mediators.h  stored.h
main/include/plot/: Axes.h
main/include/plotting/: Axes.h  Canvas.h  Chart.h  CoordinateSystem.h  EntitiesGen.h  LabelsGen.h  LinesGen.h  Text.h  piping.h
main/include/plotting/chain-helpers/: filters.h  transformers.h
main/include/plotting/common/: services.h
main/include/plotting/generators/: EntitiesGen.h  EntitiesGenerator.h  Filter.h  Generator.h  Iota.h  LabelsGen.h  LabelsGenerator.h  LinesGen.h  LinesGenerator.h  PointsGen.h  PointsGenerator.h  Transform.h  Zip.h  aFWD.h  abstract.h  algebra.h  filter.h  generator.h  iota.h  transform.h  transform_or.h  zip.h
main/include/plotting/generators/utilities/: tuple_fun.h
main/include/plotting/makers/: LabelsMaker.h  LinesMaker.h  MarkersMaker.h
main/include/plotting/piping/: categories.h  elements.h  filters.h  rules.h  transformers.h
main/include/plotting/primitives/: Canvas.h  Colored.h  EntitiesGenerator.h  LabelsGenerator.h  LinesGenerator.h  Marker.h  PointsGenerator.h  Text.h
main/include/plotting/types/: point_types.h  rasteriser.h  text_engine.h
main/include/plotting/utilities/: fast_clipping.h
main/source/agge/: CMakeLists.txt  agge.vcxproj  agge.vcxproj.filters  blenders_intel.cpp  curves.cpp  dash.cpp  figures.cpp  hybrid_event.cpp  math.cpp  parallel.cpp  polyline.cpp  semaphore.h  stroke.cpp  stroke_features.cpp  vector_rasterizer.cpp
main/source/agge.text/: agge.text.vcxproj  agge.text.vcxproj.filters  font.cpp  layout_builder.cpp  text_engine_base.cpp
main/source/agge/platform/win32/: bitmap.cpp  thread.cpp
main/source/font-extractor/: font-extractor.cpp
main/source/plotting/: CMakeLists.txt
main/source/plotting/common/: font_loader.cpp  truetype.cpp
main/source/plotting/common/platform/win32/: services.cpp
test/samples/: CMakeLists.txt
test/samples/algebra/: algebra.cpp
test/samples/balls/: balls.cpp  balls_data.h
test/samples/balls-async/: balls-async.cpp
test/samples/common/: agg_ellipse.h  input_events.h  paths.h  serialization.h  services.h  shell.h  truetype.h
test/samples/common/platform/win32/: dc.h
test/samples/common/src/: CMakeLists.txt  truetype.cpp
test/samples/common/src/platform/win32/: dc.cpp  font.cpp  services.cpp  shell.cpp
test/samples/figures/: AndroidManifest.xml  build.xml  figures.cpp
test/samples/lines/: lines.cpp
test/samples/piechart/: piechart.cpp
test/samples/plotting/: plotting.cpp
test/samples/rasterizer/: rasterizer.cpp
test/samples/sandbox/: sandbox.cpp
test/samples/text/: text.cpp
test/samples/text-gdi/: text-gdi.cpp
test/tests/: CMakeLists.txt
test/tests/agge/: BitmapTests.cpp  BlendersTests.cpp  ClipperTests.cpp  CurvesTests.cpp  DashTests.cpp  FiguresTests.cpp  FillingRulesTests.cpp  GenericBlendersTests.cpp  MiscTests.cpp  ParallelExecutionTests.cpp  PathJoiningTests.cpp  PathTests.cpp  PodVectorTests.cpp  PreciseDeltaTests.cpp  RasterizerTests.cpp  RendererParallelTests.cpp  RendererTests.cpp  SIMDBlendersTests.cpp  ScanlineAdapterTests.cpp  StrokeFeaturesTests.cpp  StrokeTests.cpp  VectorRasterizerTests.cpp  helpers.h  mocks.h
test/tests/agge.text/: AnnotatedStringTests.cpp  FontTests.cpp  RichTextTests.cpp  TextEngineRichTextTests.cpp  TextEngineTests.cpp  helpers.h  helpers_layout.h  mocks.h  outlines.h
test/tests/agge/platform/win32/: RawBitmapTests.cpp  surface.h
test/tests/common/: helpers.h
test/tests/common/src/: CMakeLists.txt
